# hr-analysis

./: .gitignore  README.md  analysis.ipynb  pyproject.toml
summative-project/: README.md  TODO.md  analysis.ipynb  environment.yml  pyproject.toml
summative-project/data/: HR_comma_sep.csv
summative-project/jupyter/: codexgen_1.ipynb  test.ipynb
