[project]
name = "HR_Analytics"
version = "0.1.0"
description = "HR analytics project for the 2025 Fall Python course"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
